--- a/package.json
+++ b/package.json
@@ -11,13 +11,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.1.0",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/material": "^13.1.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@popperjs/core": "^2.11.8",
+    "angular-calendar": "^0.29.0",
+    "angular-draggable-droppable": "^8.0.0",
+    "angular-resizable-element": "^7.0.2",
+    "angularx-flatpickr": "^6.1.0",
+    "assert": "^2.0.0",
+    "bootstrap": "^5.3.0",
+    "calendar-utils": "^0.2.3",
+    "core-js": "^3.31.0",
+    "date-fns": "^1.29.0",
+    "flatpickr": "^4.5.2",
+    "ngx-mask": "^16.1.9",
+    "rrule": "^2.5.6",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
